Changed HTMl h2 title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       First name: <input type="text" id="fname" value="Pablo"><br>
 Last name: <input type="text" id="lname" value="Vert"><br>
 <input type="button" value="Submit" onclick="getFormvalue()">
-    <h1>Pablo Cordova </h1>
+    <h1>Pablo Vert  </h1>
     <h2>By Pablo Cordova</h2>
      <script src="script.js"></script>
     <a href="contact.html">About Pablo</a>
